--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blackhawk</title>
-    <link rel="stylesheet" href="../style.css">
-    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="../style.css" />
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' />
+    <script src = "../webHandler.js"></script>
 </head>
 <body>
-    <div class="navigation">
+    <div id="navbar">
         <ul>
             <li><a href="homepage.html">Home</a></li>
             <li><a href="apply.html">Apply</a></li>
             <li><a href="install.html">Install</a></li>
-            <li><a class = "active" href="about.html">About</a></li>
+            <li><a class="active" href="about.html">About</a></li>
         </ul>
     </div>
     
-    <h1>Contact information:</h1>
-
-    <p>Email: roan_campo@dlsu.edu.ph</p>
-
+    <div class="content">
+        <h1>Contact information:</h1>
+        <p>Email: roan_campo@dlsu.edu.ph</p>
+    </div>
+    <script src="../webHandler.js"></script>
 </body>
 </html>
