--- a/src/pages/apply.html
+++ b/src/pages/apply.html
@@ -8,22 +8,23 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
 <body>
-    <div class="navigation">
+    <div id="navbar">
         <ul>
             <li><a href="homepage.html">Home</a></li>
-            <li><a class = "active" href="apply.html">Apply</a></li>
+            <li><a class="active" href="apply.html">Apply</a></li>
             <li><a href="install.html">Install</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
     </div>
     
-
-    <div class="control">
-        <h1>Controls:</h1>
-        <ul>
-            <li><button> Update Calendars </button></li>
-        </ul>
+    <div class="content">
+        <div class="control">
+            <h1>Controls:</h1>
+            <ul>
+                <li><button class="pressable"> Update Calendars </button></li>
+            </ul>
+        </div>
     </div>
-    
+    <script src="../webHandler.js"></script>
 </body>
 </html>
