--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -11,7 +11,7 @@
 <body>
     <div id="navbar">
         <ul>
-            <li><a href="homepage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="apply.html">Apply</a></li>
             <li><a href="install.html">Install</a></li>
             <li><a class="active" href="about.html">About</a></li>
