--- a/public/pages/apply.html
+++ b/public/pages/apply.html
@@ -10,7 +10,7 @@
 <body>
     <div id="navbar">
         <ul>
-            <li><a href="homepage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a class="active" href="apply.html">Apply</a></li>
             <li><a href="install.html">Install</a></li>
             <li><a href="about.html">About</a></li>
