--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -18,7 +18,7 @@
     <div id="divider"></div>
     <div id="navbar">
         <ul>
-            <li><a class="active" href="homepage.html">Home</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
             <li><a href="apply.html">Apply</a></li>
             <li><a href="install.html">Install</a></li>
             <li><a href="about.html">About</a></li>
@@ -46,5 +46,6 @@
     </div>
     
     <script src="../webHandler.js"></script>
+    
 </body>
 </html>
