--- a/public/pages/apply.html
+++ b/public/pages/apply.html
@@ -27,6 +27,7 @@
                 <ul>
                     <li><button class="pressable" id="bTheme"> Website Theme </button></li>
                     <li><button class="pressable" id="bList"> Calendar Tasks </button></li>
+                    <li><button class="pressable" id="bMdList"> Markdown Tasks </button></li>
                     <li>
                         <div>
                             <button class="pressable expandable_button"> Markdown Path </button>
@@ -41,9 +42,8 @@
                             </div>
                         </div>
                     </li>
-                    <li><button class="pressable" id="bMdList"> Markdown Tasks </button></li>
                     <li>
-                        <button class="pressable" id="bAddEvents"> Add Tasks </button>
+                        <button class="pressable" id="bAddEvents"> Sync Tasks </button>
                     </li>
                 </ul>
             </div>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <hr />
-                <pre id="List">Data will display here</pre>
+                <pre id="screenList">Data will display here</pre>
             </div>
         </div>
     </div>
