--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -21,9 +21,9 @@
     <div id="navbar">
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="/pages/apply.html">Apply</a></li>
-            <li><a href="/pages/install.html">Install</a></li>
-            <li><a href="/pages/about.html">About</a></li>
+            <li><a href="apply.html">Apply</a></li>
+            <li><a href="install.html">Install</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
     </div>
     
