--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blackhawk</title>
+    <title>Black Allium</title>
     <link rel = "icon" type= "image/x-icon" href="../images/canary.png">
     <link rel="stylesheet" href="../css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
@@ -12,7 +12,7 @@
 <body>
     <div id="hero-image">
         <div>
-            <h1> Welcome to Blackhawk </h1>
+            <h1> Welcome to Black Allium </h1>
             <p>An Obsidian Plugin that notifies your Google Calendar.</p>
             <a href="/pages/install.html">Install here</a>
         </div>
@@ -30,7 +30,7 @@
     
     
     <div class="content">
-        <h1>What is it? </h1>
+        <h1>What is Black Allium? </h1>
         <p>Keep up to date with your Google Calendar from Markdown in your obsidian folder.</p>
         <p>How do you install the program? You need to have your Google Calendar API enabled for this to work.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris volutpat, neque at dapibus lacinia, lectus dui elementum libero, nec lacinia turpis arcu ut nisi. Quisque non turpis pretium, bibendum metus lobortis, fermentum purus. Cras luctus orci ex, et viverra diam semper aliquet. Donec rhoncus facilisis mauris in semper. Integer tincidunt diam vel libero dictum, quis placerat odio volutpat. Aliquam ullamcorper neque et massa ultricies, sed gravida nisl dapibus. Nullam egestas lorem turpis, quis imperdiet lectus sodales nec. Aenean vel elementum urna. Sed condimentum imperdiet urna. Proin convallis lacus metus, eget pretium odio dapibus vitae. Ut eu enim cursus, venenatis lacus eget, auctor elit. Nulla facilisi.</p>
