--- a/public/pages/apply.html
+++ b/public/pages/apply.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Black Allium</title>
     <link rel = "icon" type= "image/x-icon" href="../images/canary.png">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="/public/css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Fira Code' rel='stylesheet'>
-    <script type="module" src="../app/webHandler.js"></script>
+    <script type="module" src="/app/webHandler.js"></script>
 </head>
 <body>
-    <div id="navbar">
+    <navbar id="navbar">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a class="active" href="apply.html">Apply</a></li>
-            <li><a href="install.html">Install</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="/public/pages/index.html">Home</a></li>
+            <li><a class="active" href="/public/pages/apply.html">Apply</a></li>
+            <li><a href="/public/pages/install.html">Install</a></li>
+            <li><a href="/public/pages/about.html">About</a></li>
         </ul>
-    </div>
+    </navbar>
     
     <div class="content">
         <div id="app">
